--- a/src/app/components/home/home-page/home-page.component.html
+++ b/src/app/components/home/home-page/home-page.component.html
@@ -156,37 +156,8 @@
     </div>
   </section>
 
-  <!-- Footer Section -->
-  <footer class="home-page__footer">
-    <div class="home-page__footer-content">
-      <div class="home-page__footer-logo">
-        <img src="./boomba-logo.png" alt="Boomba Logo" />
-        <p>Descubra e crie micro-eventos na sua região</p>
-      </div>
-      <div class="home-page__footer-social">
-        <h4>Siga-nos</h4>
-        <div class="home-page__social-links">
-          <a href="https://instagram.com/boomba" target="_blank" title="Instagram">
-            <i class="bi bi-instagram"></i>
-          </a>
-          <a href="https://facebook.com/boomba" target="_blank" title="Facebook">
-            <i class="bi bi-facebook"></i>
-          </a>
-          <a href="https://twitter.com/boomba" target="_blank" title="Twitter">
-            <i class="bi bi-twitter"></i>
-          </a>
-        </div>
-      </div>
-      <div class="home-page__footer-contact">
-        <h4>Contato</h4>
-        <a class="home-page__footer-contact" href="mailto:boombaofc@gmail.com">boombaofc&#64;gmail.com</a><br>
-        <a class="home-page__footer-contact" href="https://wa.me/71982451668">(71) 98245-1668</a>
-      </div>
-    </div>
-    <div class="home-page__footer-copyright">
-      <p>&copy; 2025 Boomba. Todos os direitos reservados.</p>
-    </div>
-  </footer>
+  <!-- Use the shared footer component -->
+  <app-footer></app-footer>
 
   <!-- Floating Action Buttons (Mobile) -->
   <div class="home-page__fab">
