--- a/src/app/components/picos/picos-list/picos-list.component.scss
+++ b/src/app/components/picos/picos-list/picos-list.component.scss
@@ -3,14 +3,13 @@ body, html {
 }
 
 .picos-list-container {
-  padding: 20px;
+  padding: 100px 20px 20px 20px;
   max-width: 1200px;
   margin: 0 auto;
   background: var(--gray-900);
   min-height: 100vh;
   color: var(--white);
-  width: 100%;
-  padding-top: 70px; // Add padding to account for fixed header
+  width: 100%;  
 }
 
 :host {
