--- a/src/app/components/picos/picos-map/picos-map.component.html
+++ b/src/app/components/picos/picos-map/picos-map.component.html
@@ -10,7 +10,7 @@
         <i class="bi bi-arrow-left"></i> Voltar
       </a>
       <a routerLink="/adicionar-pico" class="btn btn-primary">
-        <i class="bi bi-plus-lg"></i> Adicionar Pico
+        <i class="bi bi-plus-lg"></i> Criar Pico
       </a>
     </div>
   </header>
